--- a/po/id.po
+++ b/po/id.po
@@ -1,74 +1,75 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Indonesian translations for Git.
+# Copyright (C) 2018 Ahmad Naufal Mukhtar <halo@anaufalm.com>
+# This file is distributed under the same license as the Git package.
+# Ahmad Naufal Mukhtar <halo@anaufalm.com>, 2018.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: git\n"
 "Report-Msgid-Bugs-To: Git Mailing List <git@vger.kernel.org>\n"
-"POT-Creation-Date: 2018-01-07 07:50+0800\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2018-02-21 23:14+0800\n"
+"PO-Revision-Date: 2018-02-22 00:35+0800\n"
+"Last-Translator: Ahmad Naufal Mukhtar <halo@anaufalm.com>\n"
+"Language-Team: Ahmad Naufal Mukhtar <halo@anaufalm.com>\n"
+"Language: id\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Plural-Forms: nplurals=2; plural=n<=1 ?0 : 1;\n"
 
 #: advice.c:62
 #, c-format
 msgid "hint: %.*s\n"
-msgstr ""
+msgstr "petunjuk"
 
 #: advice.c:90
 msgid "Cherry-picking is not possible because you have unmerged files."
-msgstr ""
+msgstr "Pemungutan-cherry tidak dapat dilakukan karena Anda memiliki file yang di-unmerged."
 
 #: advice.c:92
 msgid "Committing is not possible because you have unmerged files."
-msgstr ""
+msgstr "Commit tidak dapat dilakukan karena Anda memiliki file yang di-unmerged."
 
 #: advice.c:94
 msgid "Merging is not possible because you have unmerged files."
-msgstr ""
+msgstr "Merge tidak dapat dilakukan karena Anda memiliki file yang di-unmerged."
 
 #: advice.c:96
 msgid "Pulling is not possible because you have unmerged files."
-msgstr ""
+msgstr "Pull tidak dapat dilakukan karena Anda memiliki file yang di-unmerged."
 
 #: advice.c:98
 msgid "Reverting is not possible because you have unmerged files."
-msgstr ""
+msgstr "Revert tidak dapat dilakukan karena Anda memiliki file yang di-unmerged."
 
 #: advice.c:100
 #, c-format
 msgid "It is not possible to %s because you have unmerged files."
-msgstr ""
+msgstr "Tidak dapat melakukan %s karena Anda memiliki file yang di-unmerged."
 
 #: advice.c:108
 msgid ""
 "Fix them up in the work tree, and then use 'git add/rm <file>'\n"
 "as appropriate to mark resolution and make a commit."
 msgstr ""
+"Perbaiki mereka di pohon kerja, keudian gunakan 'git add/rm <file>'\n"
+"yang sesuai untuk menandai resolusi dan buatlah commit."
 
 #: advice.c:116
 msgid "Exiting because of an unresolved conflict."
-msgstr ""
+msgstr "Keluar karena ada konflik yang belum terselesaikan"
 
 #: advice.c:121 builtin/merge.c:1213
 msgid "You have not concluded your merge (MERGE_HEAD exists)."
-msgstr ""
+msgstr "Anda belum menyimpulkan merge Anda (MERGE_HEAD exists)."
 
 #: advice.c:123
 msgid "Please, commit your changes before merging."
-msgstr ""
+msgstr "Mohon commit perubahan Anda sebelum melakukan merge."
 
 #: advice.c:124
 msgid "Exiting because of unfinished merge."
-msgstr ""
+msgstr "Keluar karena merge belum selesai."
 
 #: advice.c:130
 #, c-format
